crates/rmcp-openapi/src/snapshots/rmcp_openapi__tool_generator__tests__test_multipart_form_data_with_multiple_files.snap
---
source: crates/rmcp-openapi/src/tool_generator.rs
expression: schema
---
{
  "type": "object",
  "properties": {
    "avatar": {
      "type": "object",
      "description": "Profile avatar image",
      "properties": {
        "content": {
          "type": "string",
          "description": "File content as data URI (e.g., data:image/png;base64,...)"
        },
        "filename": {
          "type": "string",
          "description": "Optional filename for the upload"
        }
      },
      "required": [
        "content"
      ]
    },
    "document": {
      "type": "object",
      "description": "Supporting document",
      "properties": {
        "content": {
          "type": "string",
          "description": "File content as data URI (e.g., data:image/png;base64,...)"
        },
        "filename": {
          "type": "string",
          "description": "Optional filename for the upload"
        }
      },
      "required": [
        "content"
      ]
    },
    "resume": {
      "type": "object",
      "description": "Resume file",
      "properties": {
        "content": {
          "type": "string",
          "description": "File content as data URI (e.g., data:image/png;base64,...)"
        },
        "filename": {
          "type": "string",
          "description": "Optional filename for the upload"
        }
      },
      "required": [
        "content"
      ]
    }
  },
  "required": [
    "avatar",
    "resume"
  ],
  "description": "Multiple file upload request"
}
