crates/rmcp-openapi/src/snapshots/rmcp_openapi__tool_generator__tests__test_multipart_form_data_with_single_file.snap
---
source: crates/rmcp-openapi/src/tool_generator.rs
expression: schema
---
{
  "type": "object",
  "properties": {
    "file": {
      "type": "object",
      "description": "The file to upload",
      "properties": {
        "content": {
          "type": "string",
          "description": "File content as data URI (e.g., data:image/png;base64,...)"
        },
        "filename": {
          "type": "string",
          "description": "Optional filename for the upload"
        }
      },
      "required": [
        "content"
      ]
    }
  },
  "required": [
    "file"
  ],
  "description": "File upload request"
}
