crates/rmcp-openapi/src/snapshots/rmcp_openapi__tool_generator__tests__test_petstore_get_pet_by_id_output_schema.snap
---
source: crates/rmcp-openapi/src/tool_generator.rs
expression: output_schema
---
{
  "type": "object",
  "description": "Unified response structure with success and error variants",
  "required": [
    "status",
    "body"
  ],
  "additionalProperties": false,
  "properties": {
    "status": {
      "type": "integer",
      "description": "HTTP status code",
      "minimum": 100,
      "maximum": 599
    },
    "body": {
      "description": "Response body - either success data or error information",
      "oneOf": [
        {
          "type": "object",
          "properties": {
            "id": {
              "type": "integer",
              "format": "int64"
            },
            "name": {
              "type": "string"
            },
            "status": {
              "type": "string"
            }
          },
          "required": [
            "id",
            "name"
          ],
          "additionalProperties": true
        },
        {
          "required": [
            "error"
          ],
          "properties": {
            "error": {
              "description": "Execution errors that occur during tool execution\nThese return as Ok(CallToolResult { is_error: true })",
              "oneOf": [
                {
                  "description": "HTTP error response from the API",
                  "type": "object",
                  "properties": {
                    "status": {
                      "description": "HTTP status code",
                      "type": "integer",
                      "format": "uint16",
                      "minimum": 0,
                      "maximum": 65535
                    },
                    "message": {
                      "description": "Error message or response body",
                      "type": "string"
                    },
                    "details": {
                      "description": "Optional structured error details from API"
                    },
                    "type": {
                      "type": "string",
                      "const": "http-error"
                    }
                  },
                  "required": [
                    "type",
                    "status",
                    "message"
                  ]
                },
                {
                  "description": "Network/connection failures",
                  "type": "object",
                  "properties": {
                    "message": {
                      "description": "Description of the network failure",
                      "type": "string"
                    },
                    "category": {
                      "description": "Network error categories for better error handling",
                      "oneOf": [
                        {
                          "description": "Request timeout",
                          "type": "string",
                          "const": "timeout"
                        },
                        {
                          "description": "Connection error (DNS, refused, unreachable)",
                          "type": "string",
                          "const": "connect"
                        },
                        {
                          "description": "Request construction/sending error",
                          "type": "string",
                          "const": "request"
                        },
                        {
                          "description": "Response body error",
                          "type": "string",
                          "const": "body"
                        },
                        {
                          "description": "Response decoding error",
                          "type": "string",
                          "const": "decode"
                        },
                        {
                          "description": "Other network errors",
                          "type": "string",
                          "const": "other"
                        }
                      ]
                    },
                    "type": {
                      "type": "string",
                      "const": "network-error"
                    }
                  },
                  "required": [
                    "type",
                    "message",
                    "category"
                  ]
                },
                {
                  "description": "Response parsing failed",
                  "type": "object",
                  "properties": {
                    "reason": {
                      "description": "Description of the parsing failure",
                      "type": "string"
                    },
                    "raw_response": {
                      "description": "Raw response body for debugging",
                      "type": [
                        "string",
                        "null"
                      ]
                    },
                    "type": {
                      "type": "string",
                      "const": "response-parsing-error"
                    }
                  },
                  "required": [
                    "type",
                    "reason"
                  ]
                }
              ]
            }
          },
          "description": "Error response structure for tool execution failures",
          "type": "object"
        }
      ]
    }
  }
}
