crates/rmcp-openapi/src/snapshots/rmcp_openapi__tool_generator__tests__test_property_sanitization_with_annotations.snap
---
source: crates/rmcp-openapi/src/tool_generator.rs
expression: result
---
{
  "type": "object",
  "properties": {
    "price": {
      "type": "number",
      "x-original-name": "price($)"
    },
    "user_name": {
      "type": "string",
      "x-original-name": "user name"
    },
    "validName": {
      "type": "string"
    }
  },
  "additionalProperties": true
}
