crates/rmcp-openapi/src/snapshots/rmcp_openapi__tool_generator__tests__test_request_body_array_schema.snap
---
source: crates/rmcp-openapi/src/tool_generator.rs
expression: request_body_schema
---
{
  "type": "array",
  "items": {
    "type": "object",
    "additionalProperties": true
  },
  "description": "Array of pet objects",
  "x-location": "body",
  "x-content-type": "application/json"
}
