crates/rmcp-openapi/src/snapshots/rmcp_openapi__tool_generator__tests__test_request_body_object_schema.snap
---
source: crates/rmcp-openapi/src/tool_generator.rs
expression: request_body_schema
---
{
  "type": "object",
  "additionalProperties": true,
  "description": "Pet object that needs to be added to the store"
}
