crates/rmcp-openapi/src/snapshots/rmcp_openapi__tool_generator__tests__test_request_body_ref_schema.snap
---
source: src/tool_generator.rs
expression: request_body_schema
---
{
  "additionalProperties": true,
  "description": "Request body data",
  "type": "object",
  "x-content-type": "application/json",
  "x-location": "body"
}
