crates/rmcp-openapi/src/snapshots/rmcp_openapi__tool_generator__tests__test_request_body_simple_object_with_properties.snap
---
source: src/tool_generator.rs
expression: request_body_schema
---
{
  "additionalProperties": true,
  "description": "Pet status update",
  "properties": {
    "reason": {
      "type": "string"
    },
    "status": {
      "type": "string"
    }
  },
  "required": [
    "status"
  ],
  "type": "object",
  "x-content-type": "application/json",
  "x-location": "body"
}
