crates/rmcp-openapi/src/snapshots/rmcp_openapi__tool_generator__tests__test_request_body_string_schema.snap
---
source: crates/rmcp-openapi/src/tool_generator.rs
expression: request_body_schema
---
{
  "type": "string",
  "minLength": 1,
  "maxLength": 100,
  "description": "Request body data"
}
